--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -50,12 +50,15 @@
     ~/.zshrc:
       create: true
       path: zsh/.zshrc
+    ~/.gitconfig:
+      create: true
+      path: git/gitconfig
     ~/proyectos/.gitconfig:
       create: true
-      path: git/gitconfig
+      path: git/gitconfig_proyectos
     ~/.dotfiles/.gitconfig:
       create: true
-      path: git/gitconfig
+      path: git/gitconfig_proyectos
     ~/lcapps/.gitconfig:
       create: true
       path: git/gitconfig_lcapps
