feat: update config

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,11 +1,17 @@
 cask "iterm2"
 cask "visual-studio-code"
 cask "google-chrome"
-cask "google-cloud-sdk"
 cask "postman"
 cask "appcleaner"
 cask "notion"
-cask "jetbrains-toolbox"
+#cask "jetbrains-toolbox"
+#cask "intellij-idea"
+brew "azure-cli"
 brew "nvm"
-brew "firebase-cli"
-
+brew "jq"
+brew "helm"
+brew "postgresql@12"
+cask "docker"
+cask "raycast"
+cask "1password"
+cask "1password-cli"
